add do while and more

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    <script src="/public/js/03-control-flujo/06-for.js"></script>
+asd
+    <script src="/public/js/03-control-flujo/05-do-while.js"></script>
 </body>
 </html>
